# Easy-Docs-AI

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  pyproject.toml
.agent/: rules.md
graphify-out/: .graphify_detect.json  .graphify_python
pages/ChatPage/: code.html
src/: main.py
src/app/: App.py
src/components/: Appbar.py  Hero.py  __init__.py  appbar.py  chat_drawer.py  chat_mock.py  footer.py  hero.py  howitworks.py  modes.py  upload_card.py  utils.py
src/components/chat/: __init__.py  chatAppbar.py  messages.py
src/routes/: route.py
src/utils/: __init__.py  config.py  logger.py  session.py  style.py  supabase.py  utils.py
src/utils/ai/: chunk.py  extract.py  openrouter.py  rag.py
src/views/: __init__.py  auth_callback.py  chat.py  confirm_email.py  home.py  login.py  notfound.py  register.py  reset_password.py  restore_password.py  session.py
supabase/migrations/: 20260514000000_initial_schema.sql  20260519000000_chunks_unique.sql  20260519000001_upload_document_atomic.sql
