[project]
name = "easydocs-ai"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "flet>=0.81.0",
    "postgrest>=2.28.3",
    "python-dotenv>=1.2.2",
    "storage3>=2.28.3",
    "supabase>=2.28.3",
]

[dependency-groups]
dev = [
    "flet-cli>=0.81.0",
    "flet-desktop-light>=0.81.0",
    "flet-web>=0.81.0",
]

[tool.flet]
org = "com.mycompany"
product = "easydocs-ai"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"
